--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd packages/react-frontend && npm run dev"
   },
   "author": "",
   "license": "ISC",
   "workspaces": [
-      "packages/*"
-      
+    "packages/*"
   ]
 }
